deploying  to server

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USER=root
-DB_PASSWORD=
+DB_USER=ecommerce_user
+DB_PASSWORD=Sada%1234
 DB_NAME=ecommerce_db
 REDIS_ADDR=localhost:6379
 JWT_SECRET=8f3m9x2j5k7q0w4r8t1y3u6i2o9p5l3z123
